--- a/index/index.html
+++ b/index/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="es" class="no-js">
 
 <head>
     <meta charset="utf-8">
@@ -22,30 +22,17 @@
     <link href="https://vjs.zencdn.net/7.4.1/video-js.css" rel="stylesheet">
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js" type="text/javascript"></script>
     <script src="assets/js/load.js" type="text/javascript"></script>
-
-    <script>
-        function loadHTML(el, file) {
-          const xhttp = new XMLHttpRequest();
-          xhttp.onreadystatechange = function () {
-            if (this.readyState == 4 && this.status == 200) {
-              el.innerHTML = this.responseText;
-            }
-          };
-          xhttp.open("GET", file, true);
-          xhttp.send();
-        }
-    </script>
 </head>
 
 <body class="newsfeed">
     <div class="container-fluid" id="wrapper">
         <div class="row newsfeed-size">
             <div class="col-md-12 newsfeed-right-side">
-                <div id="nav"></div>
                 <script>
-                    loadHTML(document.getElementById('nav'), 'nav.html');
-                </script>
 
+                    loadHTML(document.getElementById('header'), 'nav.html');
+
+                </script>
                 
                 <div class="row newsfeed-right-side-content mt-3">
                     <div class="col-md-3 newsfeed-left-side sticky-top shadow-sm" id="sidebar-wrapper">
