Modo oscuro terminado (faltan detalles) y carrusel terminado

--- a/menu_izq.html
+++ b/menu_izq.html
@@ -1,32 +1,32 @@
 <!--Menu lateral izquierdo-->
-<div class="card newsfeed-user-card h-100">
-    <ul class="list-group list-group-flush newsfeed-left-sidebar">
-        <li class="list-group-item d-flex justify-content-center align-items-center sd-active">
+<div class="card newsfeed-user-card h-100"  id="mennu">
+    <ul class="list-group list-group-flush newsfeed-left-sidebar"  id="mennu">
+        <li class="list-group-item d-flex justify-content-center align-items-center sd-active"  id="mennu">
             <a href="#" class="sidebar-item d-flex justify-content-center"><img src="assets/images/icons/left-sidebar/menu.png" alt="newsfeed"></a>
             <!--<a href="#" class="newsfeedListicon"><i class='bx bx-dots-horizontal-rounded'></i></a>-->
         </li>
-        <li class="list-group-item d-flex flex-column align-items-center text-center">
+        <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
             <a href="index.html" class="sidebar-item d-flex flex-column align-items-center text-center">
                 <img src="assets/images/icons/left-sidebar/home.png" alt="home" class="mb-2 d-block mx-auto">
-                <div>Inicio</div>
+                <div id="CamText">Inicio</div>
             </a>
         </li>
-        <li class="list-group-item d-flex flex-column align-items-center text-center">
+        <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
             <a href="groups.html" class="sidebar-item d-flex flex-column align-items-center text-center">
-                <img src="assets/images/icons/left-sidebar/oferta_a.png" alt="group" class="mb-2 d-block mx-auto">
-                <div>Oferta Académica</div>
+                <img src="assets/images/icons/left-sidebar/oferta_a.png" alt="" class="mb-2 d-block mx-auto">
+                <div id="CamText">Oferta Académica</div>
             </a>
         </li>
-        <li class="list-group-item d-flex flex-column align-items-center text-center">
+        <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
             <a href="events.html" class="sidebar-item d-flex flex-column align-items-center text-center">
                 <img src="assets/images/icons/left-sidebar/oferta_L.png" alt="event" class="mb-2 d-block mx-auto">
-                <div>Oferta Laboral</div>
+                <div id="CamText">Oferta Laboral</div>
             </a>
         </li>
-        <li class="list-group-item d-flex flex-column align-items-center text-center">
+        <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
             <a href="events.html" class="sidebar-item d-flex flex-column align-items-center text-center">
                 <img src="assets/images/icons/left-sidebar/repositorio.png" alt="event" class="mb-2 d-block mx-auto">
-                <div>Repositorio</div>
+                <div id="CamText">Repositorio</div>
             </a>
         </li>
     </ul>
