--- a/Tiempo_Hora.html
+++ b/Tiempo_Hora.html
@@ -1,4 +1,4 @@
-<div class="card shadow-sm">
+<div class="card shadow-sm" id="weather-card">
     <div class="card-body">
         <div class="weather-card-header d-flex justify-content-between align-items-center">
             <p id="current-time" class="fs-6 mb-0"></p>
