--- a/central.html
+++ b/central.html
@@ -66,11 +66,11 @@
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Anterior</span>
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Siguiente</span>
           </button>
     </div>
 </div>
@@ -310,12 +310,12 @@
     </div>
 
     -->
-    <div class="post border-bottom p-3 bg-white w-shadow">
+    <div class="border-bottom p-3 w-shadow" id="pub">
         <div class="media text-muted pt-3">
             <img src="assets/images/users/user-2.jpg" alt="Online user" class="mr-3 post-user-image">
-            <div class="media-body pb-3 mb-0 small lh-125">
+            <div class="media-body pb-3 mb-0 small lh-125" id="Pt1">
                 <div class="d-flex justify-content-between align-items-center w-100">
-                    <a href="#" class="text-gray-dark post-user-name">Karen Minas</a>
+                    <a href="#" class="text-gray-dark post-user-name" id="Pt1">Karen Minas</a>
                     <div class="dropdown">
                         <a href="#" class="post-more-settings" role="button" data-toggle="dropdown" id="postOptions" aria-haspopup="true" aria-expanded="false">
                             <i class='bx bx-dots-horizontal-rounded'></i>
@@ -384,7 +384,7 @@
             <!-- Reactions -->
             <div class="argon-reaction">
                 <span class="like-btn">
-                    <a href="#" class="post-card-buttons" id="reactions"><i class='bx bxs-like mr-2'></i> 67</a>
+                    <a href="#" class="post-card-buttons" id="reactions"><i class='bx bxs-like mr-2' id="Pt1"></i> 67</a>
                     <ul class="reactions-box dropdown-shadow">
                         <li class="reaction reaction-like" data-reaction="Like"></li>
                         <li class="reaction reaction-love" data-reaction="Love"></li>
@@ -395,10 +395,10 @@
                     </ul>
                 </span>
             </div>
-            <a href="javascript:void(0)" class="post-card-buttons" id="show-comments"><i class='bx bx-message-rounded mr-2'></i> 5</a>
+            <a href="javascript:void(0)" class="post-card-buttons" id="show-comments"><i class='bx bx-message-rounded mr-2' id="Pt1"></i> 5</a>
             <div class="dropdown dropup share-dropup">
-                <a href="#" class="post-card-buttons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class='bx bx-share-alt mr-2'></i> Share
+                <a href="#" class="post-card-buttons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="Pt1">
+                    <i class='bx bx-share-alt mr-2' id="Pt1"></i> Share
                 </a>
                 <div class="dropdown-menu post-dropdown-menu">
                     <a href="#" class="dropdown-item">
