--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         // Llamar a la función para obtener la temperatura al cargar la página
         fetchTemperature();
 
-        // Actualizar la temperatura cada 10 minutos
+        // Actualizar la temperatura cada 10 min    utos
         setInterval(fetchTemperature, 600000); // 600000 ms = 10 minutos
     });
 </script>
@@ -119,14 +119,14 @@
 <body class="newsfeed">
     <div class="container-fluid" id="wrapper">
         <div class="row newsfeed-size">
-            <div class="col-md-12 newsfeed-right-side">
-                <div id="nav"></div>
+            <div class="col-md-12 newsfeed-right-side" id="complemento">
+                <div id="nave"></div>
                 <!--Importación del módulo de nav-->
                 <script>
-                    loadHTML(document.getElementById('nav'), 'nav.html');
+                    loadHTML(document.getElementById('nave'), 'nav.html');
                 </script>
 
-                <div class="row newsfeed-right-side-content mt-3">
+                <div class="row newsfeed-right-side-content mt-3" id="backgroundDiv">
                     <div class="container mt-5">
                         <div class="row">
                             <!-- Módulo 1 -->
@@ -383,7 +383,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
