Oferta Lab, Acad, Repositorio, Inicio de sesion

--- a/menu_izq.html
+++ b/menu_izq.html
@@ -12,19 +12,19 @@
             </a>
         </li>
         <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
-            <a href="groups.html" class="sidebar-item d-flex flex-column align-items-center text-center">
+            <a href="oferta_academica.html" class="sidebar-item d-flex flex-column align-items-center text-center">
                 <img src="assets/images/icons/left-sidebar/oferta_a.png" alt="" class="mb-2 d-block mx-auto">
                 <div id="CamText">Oferta Académica</div>
             </a>
         </li>
         <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
-            <a href="events.html" class="sidebar-item d-flex flex-column align-items-center text-center">
+            <a href="oferta_laboral.html" class="sidebar-item d-flex flex-column align-items-center text-center">
                 <img src="assets/images/icons/left-sidebar/oferta_L.png" alt="event" class="mb-2 d-block mx-auto">
                 <div id="CamText">Oferta Laboral</div>
             </a>
         </li>
         <li class="list-group-item d-flex flex-column align-items-center text-center"  id="mennu">
-            <a href="events.html" class="sidebar-item d-flex flex-column align-items-center text-center">
+            <a href="repositorio.html" class="sidebar-item d-flex flex-column align-items-center text-center">
                 <img src="assets/images/icons/left-sidebar/repositorio.png" alt="event" class="mb-2 d-block mx-auto">
                 <div id="CamText">Repositorio</div>
             </a>
