--- a/tarjeta.html
+++ b/tarjeta.html
@@ -47,7 +47,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">¡Felicitaciones al Ing. Jesús Herrera García!</h5>
                                 <p class="card-text">En nombre de la comunidad del Instituto...</p>
-                                <p class="text-muted">19 de Octubre 2024</p>
+                                <p class="">19 de Octubre 2024</p>
                             </div>
                         </div>
                         <div class="col-md-3 d-none d-md-block">
