--- a/central_OL.html
+++ b/central_OL.html
@@ -46,7 +46,7 @@
 <!-- Carrusel dentro de un contenedor -->
 
 
-<div class="media-body">
+<div class="media-body mb-3">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -55,13 +55,13 @@
           </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/background/car1.jpg" class="d-block w-100 h-100" alt="Imagen 1">
+                <img src="assets/images/background/chamba11.png" class="d-block w-100 h-100" alt="Imagen 1">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/background/ca2.jpg" class="d-block w-100 h-100" alt="Imagen 2">
+                <img src="assets/images/background/chamba22.jpg" class="d-block w-100 h-100" alt="Imagen 2">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/background/car3.jpg" class="d-block w-100 h-100" alt="Imagen 3">
+                <img src="assets/images/background/chamba3.jpg" class="d-block w-100 h-100" alt="Imagen 3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -77,7 +77,7 @@
 
 
 <!-- Posts -->
-<div class="posts-section mb-5">
+<div class="posts-section mb-3">
     <!--
     <div class="post border-bottom p-3 bg-white w-shadow">
         <div class="media text-muted pt-3">
@@ -311,7 +311,7 @@
 
     -->
 
-    <div class="col-13 mb-4">
+    <div class="col-13 mb-3">
         <div class="card h-100" id="weather-card">
             <div class="row g-0 align-items-center">
                 <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
@@ -322,8 +322,58 @@
                 </div>
                 <div class="col-md-7">
                     <div class="card-body p-0">
-                        <h5 class="card-title m-2">¡Felicitaciones al Ing. Jesús Herrera García!</h5>
-                        <p class="card-text m-2">En nombre de la comunidad del Instituto...</p>
+                        <h5 class="card-title m-2">Se buscan practicantes de últimos semestres</h5>
+                        <p class="card-text m-2">Se buscan 2 practicantes de últimos...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">LEMTECH solicita 2 practicantes</h5>
+                        <p class="card-text m-2">Envía tu CV al 446 143 1317 o entrégalo en...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">Profesor de secundaria</h5>
+                        <p class="card-text m-2">Profesor de computo en Tequisquiapan</p>
                     </div>
                 </div>
                 <div class="col-md-2">
