--- a/central_Rp.html
+++ b/central_Rp.html
@@ -46,38 +46,9 @@
 <!-- Carrusel dentro de un contenedor -->
 
 
-<div class="media-body">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/background/car1.jpg" class="d-block w-100 h-100" alt="Imagen 1">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/background/ca2.jpg" class="d-block w-100 h-100" alt="Imagen 2">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/background/car3.jpg" class="d-block w-100 h-100" alt="Imagen 3">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Siguiente</span>
-          </button>
-    </div>
-</div>
-
 
 <!-- Posts -->
-<div class="posts-section mb-5">
+<div class="posts-section mb-3">
     <!--
     <div class="post border-bottom p-3 bg-white w-shadow">
         <div class="media text-muted pt-3">
@@ -311,7 +282,7 @@
 
     -->
 
-    <div class="col-13 mb-4">
+    <div class="col-13 mb-3">
         <div class="card h-100" id="weather-card">
             <div class="row g-0 align-items-center">
                 <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
@@ -322,8 +293,58 @@
                 </div>
                 <div class="col-md-7">
                     <div class="card-body p-0">
-                        <h5 class="card-title m-2">¡Felicitaciones al Ing. Jesús Herrera García!</h5>
-                        <p class="card-text m-2">En nombre de la comunidad del Instituto...</p>
+                        <h5 class="card-title m-2">Aplicación móvil para la gestión de tareas </h5>
+                        <p class="card-text m-2">Un sistema que permite a los usuarios organizar...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">Sistema de recomendación de libros</h5>
+                        <p class="card-text m-2">Utilizando algoritmos de aprendizaje automático...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">Plataforma de e-learning</h5>
+                        <p class="card-text m-2">Desarrollo de una plataforma para la educación...</p>
                     </div>
                 </div>
                 <div class="col-md-2">
@@ -336,6 +357,80 @@
         </div>
     </div>
     
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">Sistema de monitoreo de salud</h5>
+                        <p class="card-text m-2">Una aplicación que permite a los usuarios...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">Sistema de gestión de inventarios</h5>
+                        <p class="card-text m-2">Un software que ayuda a las empresas a...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-13 mb-3">
+        <div class="card h-100" id="weather-card">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-1 d-flex align-items-center justify-content-center p-2">
+                    <img src="assets/images/background/auth-bg-2.jpg" 
+                         class="rounded-circle" 
+                         alt="Imagen circular" 
+                         style="width: 60px; height: 60px; object-fit: cover;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body p-0">
+                        <h5 class="card-title m-2">Aplicación de seguimiento de gastos</h5>
+                        <p class="card-text m-2">Un sistema que permite a los usuarios registrar...</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="text-muted ms-2 m-0">19 de octubre de 2024</p>
+                </div>
+                <div class="col-md-2 d-none d-md-block h-100">
+                    <img src="assets/images/background/auth-bg-2.jpg" class="img-fluid rounded-end h-100" alt="Imagen 1" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="border-bottom p-3 w-shadow" id="pub">
         <div class="media text-muted pt-3">
