--- a/oferta_laboral.html
+++ b/oferta_laboral.html
@@ -142,7 +142,7 @@
                             <div class="col-12 col-sm-7 col-lg-8">
                                 <div id="central"></div>
                                 <script>
-                                    loadHTML(document.getElementById('central'), 'central.html');
+                                    loadHTML(document.getElementById('central'), 'central_OL.html');
                                 </script>
                             </div>
                     
