Perfil y cambio del menu izq (indicador)

--- a/menu_izq.html
+++ b/menu_izq.html
@@ -1,7 +1,7 @@
 <!--Menu lateral izquierdo-->
 <div class="card newsfeed-user-card h-100"  id="mennu">
     <ul class="list-group list-group-flush newsfeed-left-sidebar"  id="mennu">
-        <li class="list-group-item d-flex justify-content-center align-items-center sd-active"  id="mennu">
+        <li class="list-group-item d-flex justify-content-center align-items-center"  id="mennu">
             <a href="#" class="sidebar-item d-flex justify-content-center"><img src="assets/images/icons/left-sidebar/menu.png" alt="newsfeed"></a>
             <!--<a href="#" class="newsfeedListicon"><i class='bx bx-dots-horizontal-rounded'></i></a>-->
         </li>
