--- a/nav.html
+++ b/nav.html
@@ -422,7 +422,7 @@
             </li>
             
             <li class="nav-item">
-                <a href="profile.html" class="nav-link nav-links">
+                <a href="perfil.html" class="nav-link nav-links">
                     <div class="menu-user-image">
                         <img src="assets/images/users/user-4.jpg" class="menu-user-img" alt="Menu Image">
                     </div>
