Se realiza Crear Publicacion/Laboral, se hace cambio en las imagenes, y boton para agregar nuevo post

--- a/perfil.html
+++ b/perfil.html
@@ -200,8 +200,7 @@
                                                 </div>
                                                 <div class="col-md-9 col-sm-12">
                                                     <div class="timeline-manage">
-                                                        <button type="button" class="btn btn-quick-link join-group-btn border btn-sm tmo-buttons"><i class='bx bx-align-middle'></i> Crear publicación</button>
-                                                        <button type="button" class="btn btn-quick-link join-group-btn border btn-sm tmo-buttons"><i class='bx bxs-cog'></i> Editar Perfil</button>
+                                                        <button type="button" class="btn btn-quick-link join-group-btn border btn-sm tmo-buttons"><i class='bx bxs-cog'></i><a href="editar_perfil.html">Editar Perfil</a></button>
                                                         <!--<button type="button" class="btn btn-quick-link join-group-btn border btn-sm tmo-buttons"><i class='bx bxs-grid-alt'></i> Grid View</button>-->
                                                     </div>
                                                 </div>
