--- a/sign-in.html
+++ b/sign-in.html
@@ -82,11 +82,8 @@
                     <p class="weather-city">Gyumri</p>
                 </div>
                 <div class="text-white mt-5 mb-5">
-                    <h2 class="create-account mb-3">Welcome Back</h2>
-                    <p>Thank you for joining. Updates and new features are released daily.</p>
-                </div>
-                <div class="auth-quick-links">
-                    <a href="#" class="btn btn-outline-primary">Purchase template</a>
+                    <h2 class="create-account mb-3">Bienvenido de vuelta</h2>
+                    <p>¡Actualización y noticias diarias!</p>
                 </div>
             </div>
         </div>
