--- a/public/repositorio.html
+++ b/public/repositorio.html
@@ -19,6 +19,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/components.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="assets/css/media.css" rel="stylesheet">
     <link href="assets/css/chat.css" rel="stylesheet">
     <link href="https://vjs.zencdn.net/7.4.1/video-js.css" rel="stylesheet">
@@ -131,11 +133,15 @@
                     <div class="container mt-5">
                         <div class="row">
                             <!-- Módulo 1 -->
-                            <div class="col-2 col-sm-1 col-lg-1 newsfeed-left-side shadow-lg" id="menu" style="position: sticky; top: 0;">
+                            <div class="col-2 col-sm-1 col-lg-1 newsfeed-left-side shadow-lg" id="menu" style="position: fixed; top: 20; left: 0; z-index: 9999; height: 100vh;">
                                 <!--Importación del modulo de la izquierda-->
                                 <script>
                                     loadHTML(document.getElementById('menu'), 'menu_izq.html');
                                 </script>
+                            </div>
+
+                            <div class="col-2 col-sm-1 col-lg-1 newsfeed-left-side shadow-lg" id="menu">
+                                
                             </div>
                             
                             <!-- Módulo 2 -->
