Implementacion de icono faltante

--- a/public/oferta_academica.html
+++ b/public/oferta_academica.html
@@ -9,6 +9,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>ConnecTec</title>
 
+
+    <!-- icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
     <link href="assets/css/boxicons.min.css" rel="stylesheet">
@@ -164,6 +168,15 @@
             </div>
         </div>
     </div>
+
+     <!-- Botón flotante -->
+    <a href="crearLab.html">
+        <button class="btn-floating" aria-label="Agregar">
+            <i class="fas fa-plus"></i>
+        </button>
+    </a>
+
+
 
     <style>
         .time-update {
